@@ -56,6 +56,8 @@ us a note on ns-developers mailing list.</p>
   <li> CommandLine can now handle non-option (positional) arguments. </li>
   <li> Added CommandLine::Parse (const std::vector<std::string>> args) </li>
   <li> NS_LOG_FUNCTION can now log the contents of vectors </li>
+  <li> A new position allocator has been added to the buildings module, allowing
+nodes to be placed outside of buildings defined in the scenario.</li>
 <ul>
 </ul>
 <h2>Changes to existing API:</h2>
